Seeing crash in DRT after loading-iframe-sends-notification.html land https://bugs.webkit.org/show_bug.cgi?id=72624

Source/WebCore:

When an iframe finishes loading, send an accessibility notification
on the renderer, rather than on a parent node. The only reason it was
being posted on a parent before was because there was no way to detect
that in a test. This is simpler and now covered by the test.

Reviewed by Chris Fleizach.

Updates existing test:
accessibility/loading-iframe-sends-notification.html

* dom/Document.cpp:
(WebCore::Document::implicitClose):

LayoutTests:

Rewrite test to use a global addNotificationListener, which makes it
more robust and cross-platform.

Reviewed by Chris Fleizach.

* accessibility/loading-iframe-sends-notification-expected.txt: Added.
* accessibility/loading-iframe-sends-notification.html:
* platform/chromium/accessibility/loading-iframe-sends-notification-expected.txt: Removed.
* platform/chromium/test_expectations.txt:
* platform/gtk/Skipped:
* platform/gtk/accessibility/loading-iframe-sends-notification-expected.txt: Removed.
* platform/mac/Skipped:
* platform/win/Skipped:


Canonical link: https://commits.webkit.org/91247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102877 268f45cc-cd09-0410-ab3c-d52691b4dbfc